@@ -160,9 +160,7 @@ int FileBinaryInputPort::close()
 {
     if (!isClosed() && fd_ != INVALID_FILENO) {
         isClosed_ = true;
-        if (fd_ != fileno(stdin)) {
-            ::close(fd_);
-        }
+        ::close(fd_);
     }
     return MOSH_SUCCESS;
 }
